question 1 table property is fixed/overflow

--- a/weeklyAssignment1/css/question1.css
+++ b/weeklyAssignment1/css/question1.css
@@ -12,6 +12,8 @@ body {
 table {
     border-collapse: collapse;
     color: #565656;
+    overflow: hidden;
+    border-radius: 5px;
 }
 
 table tr:hover {
@@ -20,7 +22,7 @@ table tr:hover {
 
 /* Table border style starts */
 
-table tr:first-child th:first-child {
+/* table tr:first-child th:first-child {
     border-top-left-radius: 5px;
 }
 
@@ -34,7 +36,7 @@ table tr:last-child td:first-child {
 
 table tr:last-child td:last-child {
     border-bottom-right-radius: 5px;
-}
+} */
 
 /* Table border style ends */
 
